--- a/waybar-gruvbox/waybar.org
+++ b/waybar-gruvbox/waybar.org
@@ -460,12 +460,14 @@ styling for submodes like window resizing or screenshot menus. I don't use this 
     #workspaces {
         margin: 0 4px;
         color: @foreground;
+        background-color: @background-darker;
+        box-shadow: inset 0 -3px @background;
     }
 
     #workspaces button.active {
-        background-color: @background;
+        background-color: @background-darker;
         color: @forground;
-        box-shadow: inset 0 -3px @purple;
+        box-shadow: inset 0 -3px @pink;
     } 
     #workspaces button:hover {
         background: @selection;
@@ -474,8 +476,9 @@ styling for submodes like window resizing or screenshot menus. I don't use this 
     }
 
     #workspaces button.focused {
-        background-color: @purple;
-        box-shadow: inset 0 -3px #ffffff;
+        background-color: @selection;
+        color: @foreground;
+        box-shadow: inset 0 -3px @purple;
     }
 
 
@@ -499,7 +502,7 @@ styling for submodes like window resizing or screenshot menus. I don't use this 
     #clock {
         padding: 1px 8px;
         background-color: @background;
-        color: @green;
+        color: @foreground;
     }
 #+end_src
 
