Waybar gruvbox config updates

--- a/waybar-gruvbox/waybar.org
+++ b/waybar-gruvbox/waybar.org
@@ -12,7 +12,7 @@
 * About 
 #+attr_html: :width 800px :align center
 Personal Gruvbox theme for /Waybar/.  
-[[file:./images/bar-demo.png]]
+[[file:./images/gruvbox_bar_demo.png]]
 * CONFIG
 #+begin_src jsonc :tangle ~/dotfiles/waybar/config.jsonc
 // -*- mode: jsonc -*-
@@ -775,11 +775,10 @@ styling for submodes like window resizing or screenshot menus. I don't use this 
 #+auto_tangle: t
 #+exclude_tags: noexport
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
-#+export_file_name: ~/Documents/html/docs/waybar-dracula.html
+#+export_file_name: ~/Documents/html/docs/waybar-gruvbox.html
 
 1. specify the background color, and font color fo source code blocks
-#+HTML_HEAD: <style>pre.src{background:#282a36;color:white;} </style>
+#+HTML_HEAD: <style>pre.src{background:#3c3836;color:white;} </style>
 
 2. Specify the background color of code blocks. In my case these somewhat interchangable with regualar quotes, as most of the extensive code is placed in source code blocks. 
-#+HTML_HEAD: <style>code{background:#f8f8f2;color:#6272a4;} </style>
-#+HTML_HEAD: <style>ul{background:#f8f8f2;} </style>
+#+HTML_HEAD: <style>code{background:#3c3836;color:#a89984;} </style>
