--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -64,8 +64,8 @@ This section includes links to the configuration files used by /non Hyprland/ pa
 #+begin_src conf :tangle hyprland.conf
   $mainMod = SUPER
   $terminal = kitty
-  $menu = rofi -show drun run combi
-  $filemenu = rofi -show recursivebrowser filebrowser 
+  $menu = rofi -show combi -combi-modi drun,run,recursivebrowser 
+  $filemenu = rofi -show combi -combi-modi window,recursivebrowser,ssh 
 #+end_src
 
 /Less/ essential environment variables
@@ -252,7 +252,7 @@ These are keybindings which are critical for proper system functionality
   bind = $mainMod, M, exec, $fileManager
   bind = $mainMod, V, togglefloating, 
   bind = $mainMod, D, exec, $menu
-  bind = $mainMod $shiftmod, D, exec, $filemenu
+  bind = ALT, TAB, exec, $filemenu
   bind = $mainMod $shiftmod, C, exec, ~/dotfiles/hypr/scripts/reloads.sh
 #+end_src
 
@@ -719,6 +719,10 @@ You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.* 
 #+end_src
 
+Force YAD windows to float
+#+begin_src conf :tangle hyprland.conf
+windowrulev2 = float,class:^(yad)$ 
+#+end_src
 
 * FOOTNOTES :noexport:
 for multi-file configurations, a second file can be "sourced" like so:
