--- a/waybar-dracula/waybar.org
+++ b/waybar-dracula/waybar.org
@@ -205,8 +205,10 @@ Configuration for the network module
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
+        "tooltip-format-disconnected": "Disconnected ⚠",
         //"format-alt": "{ifname}: {ipaddr}/{cidr}",
-	"on-click": "kitty -e nmtui"
+	"on-click": "nmcli radio on & kitty -e nmtui",
+	"on-click-right": "nmcli radio wifi off"
     },
 #+end_src
 
