--- a/waybar-dracula/waybar.org
+++ b/waybar-dracula/waybar.org
@@ -208,7 +208,8 @@ Configuration for the network module
         "tooltip-format-disconnected": "Disconnected ⚠",
         //"format-alt": "{ifname}: {ipaddr}/{cidr}",
 	"on-click": "nmcli radio on & kitty -e nmtui",
-	"on-click-right": "nmcli radio wifi off"
+	"on-click-middle": "nmcli radio wifi off",
+	"on-click-right": "firewall-config"
     },
 #+end_src
 
