--- a/emacs/startup.org
+++ b/emacs/startup.org
@@ -31,6 +31,10 @@
 | =3= | [[elisp:(find-file (concat (getenv "HOME") "/.config/hypr/hypridle.conf"))][hypridle.conf]]  | This is the user configuration file for =Hypridle=                        |
 | =4= | [[elisp:(find-file (concat (getenv "HOME") "/.config/hypr/hyprpaper.conf"))][hyprpaper.conf]] | User configuration file for =Hyprpaper=; a wallpaper utility for Hyprland |
 |---+----------------+-------------------------------------------------------------------------|
+** Sway Configs
+|---+------------+-------------------------------------------------------|
+| =1= | [[elisp:(find-file (concat (getenv "HOME") "/dotfiles/sway-dracula/config.org"))][config.org]] | This is the *main user configuration* file for Hyprland |
+|---+------------+-------------------------------------------------------|
 ** Waybar Configs
 |---+------------+-----------------------------------------------------|
 | =1= | [[elisp:(find-file (concat (getenv "HOME") "/.config/waybar/waybar.org"))][waybar.org]] | This is the *main user configuration* file for Waybar |
