--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -516,7 +516,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-  ######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+  ###########screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
@@ -785,6 +785,11 @@ windowrulev2 = float,class:^(yad)$
 Assign Yad windows to workspace 1
 #+begin_src conf :tangle hyprland.conf
 windowrulev2 = workspace 1,class:^(yad)$  
+#+end_src
+
+Assign Emacs windows to workspace 3
+#+begin_src conf :tangle hyprland.conf
+windowrulev2 = workspace 3,class:^(emacs)$  
 #+end_src
 
 Assign steam to workspace 7
