Fix which key description for query replace action

--- a/emacs/README.org
+++ b/emacs/README.org
@@ -265,7 +265,7 @@ Elfeed-tube commands
   (hd/leader-keys
     "." '(find-file :wk "Find file")
     "f c" '((lambda () (interactive) (find-file "~/dotfiles/emacs/README.org")) :wk "Edit Emacs config")
-    "f f" '(query-replace-regexp :wk "Edit Emacs config")
+    "f f" '(query-replace-regexp :wk "Query Replace (regexp)")
     "f h" '((lambda () (interactive) (find-file "~/dotfiles/hypr/hyprland.org")) :wk "Edit Hyprland config")
     "f q" '(qrencode-export-buffer-to-file :wk "Export qrcode buffers to a file")
     "f r" '(counsel-recentf :wk "Find recent files")
